cj-nautilus-desktop-gui/desktop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cjbergen-desktop # Change this to your cruzid
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cjbergen-desktop # Change this to your cruzid
  template:
    metadata:
      labels:
        app: cjbergen-desktop # Change this to your cruzid
    spec:
      hostname: cjbergen-desktop # Change this to your cruzid
      containers:
      - name: cjbergen-desktop # Change this to your cruzid
        image: ghcr.io/selkies-project/nvidia-glx-desktop:24.04-20240924062704 # If you face compatibility issues, replace "latest" with "22.04-20240815104538" or any other tag found here https://github.com/selkies-project/docker-nvidia-glx-desktop/pkgs/container/nvidia-glx-desktop
        stdin: true
        tty: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 32Gi
            cpu: "16"
            nvidia.com/gpu: 1
            ephemeral-storage: 35Gi
          requests:
            memory: 8Gi
            cpu: "4"
            ephemeral-storage: 35Gi
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /cache
          name: cache-vol
        - mountPath: /home/ubuntu/persistent
          name: root-vol
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: dshm
        emptyDir: {}
      - name: cache-vol
        persistentVolumeClaim:
          claimName: cjbergen-carla-cache # Change this to your cruzid
      - name: root-vol
        persistentVolumeClaim:
          claimName: cjbergen-carla # Change this to your cruzid
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: NotIn
                values:
                - ucsd-suncave
